--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,10 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      SENSEBOX_ID_1: ${{ vars.SENSEBOX_ID_1 }}
+      SENSEBOX_ID_2: ${{ vars.SENSEBOX_ID_2 }}
+      SENSEBOX_ID_3: ${{ vars.SENSEBOX_ID_3 }}
 
     steps:
       - name: Checkout Repository
@@ -33,8 +37,23 @@ jobs:
       - name: Install Dependencies
         run: go get ./...
 
+      - name: Cache gosec
+        id: gosec-cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/gosec
+          key: ${{ runner.os }}-gosec-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-gosec-
+
       - name: Install gosec
-        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+        if: steps.gosec-cache.outputs.cache-hit != 'true'
+        run: |
+          mkdir -p ~/.cache/gosec
+          GOBIN=~/.cache/gosec go install github.com/securego/gosec/v2/cmd/gosec@latest
+
+      - name: Run gosec
+        run: ~/.cache/gosec/gosec ./...
 
       - name: Run Tests
         run: go test ./...
