--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
         run: go install github.com/securego/gosec/v2/cmd/gosec@latest
 
       - name: Run Tests
-        run: go test ./...
+        run: go test -v ./...
 
       - name: Run gosec
         run: gosec ./...
