--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -76,13 +76,25 @@ jobs:
         with:
           dockerfile: Dockerfile
 
-      # TODO: Container Registry Login
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: DockerHub Login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker Image For Test
         uses: docker/build-push-action@v6
         with:
           context: .
+          platform: linux/amd64, linux/arm64
           push: false
+
           tags: ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
 
       - name: Test Docker container
