--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,117 +1,118 @@
 name: tests
 
 on:
-  pull_request:
-    branches: [main]
-  push:
-    branches: ["feat/**"]
-  workflow_dispatch: {}
+    pull_request:
+        branches: [main]
+    push:
+        branches: ['feat/**']
+    workflow_dispatch: {}
 
 jobs:
-  test-go:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+    test-go:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout Repository
+              uses: actions/checkout@v4
 
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.22"
+            - name: Setup Go
+              uses: actions/setup-go@v5
+              with:
+                  go-version: '1.22'
 
-      - name: Cache Go Modules
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/go-build
-            /go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
+            - name: Cache Go Modules
+              uses: actions/cache@v3
+              with:
+                  path: |
+                      ~/.cache/go-build
+                      /go/pkg/mod
+                  key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+                  restore-keys: |
+                      ${{ runner.os }}-go-
 
-      - name: Install Dependencies
-        run: go get ./...
+            - name: Install Dependencies
+              run: go get ./...
 
-      - name: Install gosec
-        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+            - name: Install gosec
+              run: go install github.com/securego/gosec/v2/cmd/gosec@latest
 
-      - name: Run Tests
-        run: go test -v ./...
+            - name: Run Tests
+              run: go test -v ./...
 
-      - name: Run gosec
-        run: gosec ./...
+            - name: Run gosec
+              run: gosec ./...
 
-  style-go:
-    name: style
-    runs-on: ubuntu-latest
+    style-go:
+        name: style
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
 
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.22"
+            - name: Setup Go
+              uses: actions/setup-go@v5
+              with:
+                  go-version: '1.22'
 
-      - name: Install staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+            - name: Install staticcheck
+              run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
-      - name: Check formatting
-        run: test -z $(go fmt ./...)
+            - name: Check formatting
+              run: test -z $(go fmt ./...)
 
-      - name: Run linter
-        run: staticcheck ./...
+            - name: Run linter
+              run: staticcheck ./...
 
-  containerization:
-    name: containerization
-    needs: [test-go, style-go]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    containerization:
+        name: containerization
+        needs: [test-go, style-go]
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
 
-      - name: Lint Dockerfile
-        uses: hadolint/hadolint-action@v3.1.0
-        with:
-          dockerfile: Dockerfile
+            - name: Lint Dockerfile
+              uses: hadolint/hadolint-action@v3.1.0
+              with:
+                  dockerfile: Dockerfile
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+            - name: DockerHub Login
+              uses: docker/login-action@v3
+              with:
+                  username: ${{ vars.DOCKER_USERNAME }}
+                  password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+            - name: Build Docker Image For Test
+              uses: docker/build-push-action@v6
+              with:
+                  context: .
+                  push: false
+                  tags: ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
 
-      - name: DockerHub Login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+            - name: Test Docker container
+              run: |
+                  docker images
+                  docker run --name hivebox-api -d \
+                  -p 8282:8282 \
+                  -e HIVEBOX_VERSION="0.0.1" \
+                  ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
 
-      - name: Build Docker Image For Test
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          platform: linux/amd64
-          push: false
-          tags: ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
+                  echo Testing Image URL using wget
+                  wget -q -O - 127.0.0.1:8282/version | grep -i version
 
-      - name: Test Docker container
-        run: |
-          docker images
-          docker run --name hivebox-api -d \
-          -p 8282:8282 \
-          -e HIVEBOX_VERSION="0.0.1" \
-          ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
+            # TODO: Build multi-architecture-container on release
+            # - name: Set up QEMU
+            #   if: ${{ github.event_name == 'pull_request' }}
+            #   uses: docker/setup-qemu-action@v3
 
-          echo Testing Image URL using wget
-          wget -q -O - 127.0.0.1:8282/version | grep -i version
+            # - name: Set up Docker Buildx
+            #   if: ${{ github.event_name == 'pull_request' }}
+            #   uses: docker/setup-buildx-action@v3
 
-      # TODO: Build multi-architecture-container on release
-      # - name: Build Docker Image For Test
-      #   uses: docker/build-push-action@v6
-      #   with:
-      #     context: .
-      #     platform: linux/amd64, linux/arm64
-      #     push: false
-      #     tags: ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
+            # - name: Build Docker Image For Test
+            #   uses: docker/build-push-action@v6
+            #   with:
+            #     context: .
+            #     platform: linux/amd64, linux/arm64
+            #     push: false
+            #     tags: ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
