--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,9 +8,8 @@ on:
   workflow_dispatch: {}
 
 jobs:
-  test:
+  test-go:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -37,7 +36,91 @@ jobs:
         run: go install github.com/securego/gosec/v2/cmd/gosec@latest
 
       - name: Run Tests
-        run: go test ./...
+        run: go test -v ./...
 
       - name: Run gosec
         run: gosec ./...
+
+  style-go:
+    name: style
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.22"
+
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
+      - name: Check formatting
+        run: test -z $(go fmt ./...)
+
+      - name: Run linter
+        run: staticcheck ./...
+
+  containerization-test:
+    name: Build and Test Container
+    needs: [test-go, style-go]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Lint Dockerfile
+        uses: hadolint/hadolint-action@v3.1.0
+        with:
+          dockerfile: Dockerfile
+
+      - name: Build Docker Image For Test
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: false
+          tags: ${{ vars.DOCKER_USERNAME }}/hivebox:${{ github.sha }}
+
+      - name: Test Docker container
+        run: |
+          docker images
+          docker run --name hivebox-api -d \
+          -p 8282:8282 \
+          -e HIVEBOX_VERSION="0.0.1" \
+          ${{ vars.DOCKER_USERNAME }}/hivebox:${{ github.sha }}
+
+          echo Testing Image URL using wget
+          wget -q -O - 127.0.0.1:8282/version | grep -i version
+
+  containerization-build-push:
+    name: Build and Push multi-architecture-container
+    needs: [containerization-test]
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'pull_request' && github.base_ref == 'main'}}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: DockerHub Login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Set up QEMU
+        if: ${{ github.event_name == 'pull_request' }}
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        if: ${{ github.event_name == 'pull_request' }}
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker Image For Test
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          platform: linux/amd64, linux/arm64
+          push: true
+          tags: ${{ vars.DOCKER_USERNAME }}/hivebox:${{ github.sha }}
