--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,11 +1,11 @@
 name: tests
 
 on:
+  workflow_dispatch:
   pull_request:
     branches: [main]
   push:
     branches: ["feat/**"]
-  workflow_dispatch: {}
 
 jobs:
   test-go:
@@ -93,34 +93,3 @@ jobs:
 
           echo Testing Image URL using wget
           wget -q -O - 127.0.0.1:8282/version | grep -i version
-
-  containerization-build-push:
-    name: Build and Push multi-architecture-container
-    needs: [containerization-test]
-    runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' && github.base_ref == 'main'}}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: DockerHub Login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
-      - name: Set up QEMU
-        if: ${{ github.event_name == 'pull_request' }}
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        if: ${{ github.event_name == 'pull_request' }}
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build Docker Image For Test
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          platform: linux/amd64, linux/arm64
-          push: true
-          tags: ${{ vars.DOCKER_USERNAME }}/hivebox:${{ github.sha }}
