--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,7 +29,6 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
 
       - name: Login to GitHub Container Registry
-        if: ${{ github.event_name != pull_request && github.
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -46,7 +45,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          platform: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
