--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,5 +1,9 @@
 name: release
 
+permissions:
+  packages: write
+  contents: read
+
 on:
   workflow_dispatch:
   release:
@@ -41,7 +45,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker Image For Test
+      - name: Build and publish image
         uses: docker/build-push-action@v6
         with:
           context: .
