--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ${{ github.repository_owner }}/hivebox
+            ghcr.io/${{ github.repository_owner }}/hivebox
           tags: |
             type=ref,event=branch
             type=ref,event=pr
