--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,11 +5,8 @@ permissions:
   contents: read
 
 on:
-  workflow_dispatch:
-  release:
-    types: [published]
   push:
-    branches: ["main"]
+    tags: ["v*"]
 
 jobs:
   containerization-build-push:
@@ -27,8 +24,6 @@ jobs:
           images: |
             ghcr.io/${{ github.repository_owner }}/hivebox
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
 
@@ -51,5 +46,7 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/hivebox:latest
+            ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
