Feat/multi architecture container (#5)
* feat(sensebox): add dummy data and service implementation

- Added dummy sensebox data for testing purposes.
- Implemented SenseboxService to fetch data from the API.
- Created SenseboxServiceMock for unit testing.
- Added unit tests for SenseboxServiceMock.

* feat(api): add temperature endpoint

- Introduced `GetTemperatureHandler` to handle temperature data requests.
- Added `GetSenseboxData` to fetch data from multiple Sensebox devices.
- Implemented `parseTemperaturData` to parse temperature data.
- Created `average` function to calculate average temperature.
- Updated `config` struct to include Sensebox IDs.
- Added unit tests for the new temperature endpoint.

* fix: unhandled error

* refactor(api): use constants for default IDs

- Replaced hardcoded Sensebox IDs with constants in `cfg.go`.
- Updated `getSenseBoxIds` to use the new constants.
- Fixed error handling in `newTestApplication` in `test_utils.go`.
- Added default ID constants to `sensebox_mock.go`.
- Updated `GetSenseboxData` to handle new default IDs.

* ci: add env vars and cache gosec

* fix: fix incorrect conditional in getSesnseBoxIds

* delete: remove env vars from ci

* Update ci.yaml

* fix: overwriting default sensebox ids

* feat(ci): add Go style and containerization jobs

- Renamed 'test' job to 'test-go' for clarity
- Added 'style-go' job to check formatting and run staticcheck
- Added 'containerization' job to lint Dockerfile, build and test Docker image
- Updated Dockerfile to use multi-stage build for smaller image size
- Fixed Dockerfile issues with stage name casing and build output path

* fix: linting error in Dockerfile

* fix(ci): update url in wget command

* feat(ci): add multi-platform build support

- Set up QEMU for emulating different CPU architectures
- Set up Docker Buildx for multi-platform builds
- Add DockerHub login step using secrets
- Update Docker build step to support linux/amd64 and linux/arm64
- Modify Dockerfile to u

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,10 @@ on:
 jobs:
   containerization-build-push:
     name: Build and push multi-architecture containter
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    if: |
+      github.event_name == 'push' && 
+      startsWith(github.ref, 'refs/tags/v') && 
+      github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
