fix: pin checkout actions by sha

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
       contents: read
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd719
 
       - name: Setup Go
         uses: actions/setup-go@v5
@@ -54,7 +54,7 @@ jobs:
       contents: read
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd719
 
       - name: Setup Go
         uses: actions/setup-go@v5
@@ -78,7 +78,7 @@ jobs:
       contents: read
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd719
 
       - name: Lint Dockerfile
         uses: hadolint/hadolint-action@v3.1.0
@@ -86,7 +86,7 @@ jobs:
           dockerfile: Dockerfile
 
       - name: Build Docker Image For Test
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@67a2d409c0a876cbe6b11854e3e25193efe4e62d # pin@v6
         with:
           context: .
           push: false
@@ -115,7 +115,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd719
 
       - name: Docker meta
         id: meta
@@ -141,7 +141,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build and publish image
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@67a2d409c0a876cbe6b11854e3e25193efe4e62d # pin@v6
         with:
           context: .
           platforms: linux/amd64,linux/arm64,linux/arm/v7
