ci: pin actions to sha
- pinned checkout action to sha
- pinned docker login to sha

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,10 @@ on:
     branches: ["feat/**"]
     tags: ["v*"]
 
+env:
+  CHECKOUT_SHA: 11bd71901bbe5b1630ceea73d27597364c9af683
+  DOCKER_LOGIN_SHA: 327cd5a69de6c009b9ce71bce8395f28e651bf99
+
 jobs:
   test-go:
     runs-on: ubuntu-latest
@@ -18,7 +22,7 @@ jobs:
       contents: read
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@11bd719
+        uses: actions/checkout@${{ env.CHECKOUT_SHA }}
 
       - name: Setup Go
         uses: actions/setup-go@v5
@@ -54,7 +58,7 @@ jobs:
       contents: read
     steps:
       - name: Checkout code
-        uses: actions/checkout@11bd719
+        uses: actions/checkout@${{ env.CHECKOUT_SHA }}
 
       - name: Setup Go
         uses: actions/setup-go@v5
@@ -78,7 +82,7 @@ jobs:
       contents: read
     steps:
       - name: Checkout code
-        uses: actions/checkout@11bd719
+        uses: actions/checkout@${{ env.CHECKOUT_SHA }}
 
       - name: Lint Dockerfile
         uses: hadolint/hadolint-action@v3.1.0
@@ -115,7 +119,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@11bd719
+        uses: actions/checkout@${{ env.CHECKOUT_SHA }}
 
       - name: Docker meta
         id: meta
@@ -128,7 +132,7 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+        uses: docker/login-action@${{ env.DOCKER_LOGIN_SHA }}
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
