--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,7 @@ jobs:
           go-version: "1.22"
 
       - name: Cache Go Modules
-        uses: actions/cache@v3
+        uses: actions/cache@36f1e144e1c8edb0a652766b484448563d8baf46
         with:
           path: |
             ~/.cache/go-build
@@ -134,10 +134,10 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+        uses: docker/setup-qemu-action@e5daf5da4ebfd37300852e88eac67cc6ad147f38
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@6a25f988bdfa969e96a38fc9f843ea31e0b5df27
 
       - name: Build and publish image
         uses: docker/build-push-action@67a2d409c0a876cbe6b11854e3e25193efe4e62d
