--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,12 +7,11 @@ on:
   workflow_dispatch:
   push:
     branches: ["feat/**"]
-
+    tags: ["v*"]
 jobs:
   test-go:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
+    if: github.ref_type != 'tag' || startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
@@ -47,8 +46,7 @@ jobs:
   style-go:
     name: style
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
+    if: github.ref_type != 'tag' || startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
@@ -65,3 +63,80 @@ jobs:
 
       - name: Run linter
         run: staticcheck ./...
+
+  container-test:
+    name: Build and Test Container
+    needs: [style-go, test-go]
+    if: github.ref_type != 'tag' || startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+
+      - name: Lint Dockerfile
+        uses: hadolint/hadolint-action@d292784f8f3eacda47060b259a580467b0ba410c
+        with:
+          dockerfile: Dockerfile
+
+      - name: Build Docker Image For Test
+        uses: docker/build-push-action@67a2d409c0a876cbe6b11854e3e25193efe4e62d
+        with:
+          context: .
+          push: false
+          tags: ${{ vars.DOCKER_USERNAME }}/hivebox:${{ github.sha }}
+
+      - name: Test Docker container
+        run: |
+          docker images
+          docker run --name hivebox-api -d \
+          -p 8282:8282 \
+          -e HIVEBOX_VERSION="0.0.1" \
+          ${{ github.repository_owner }}/hivebox:${{ github.sha }}
+
+          sleep 2
+
+          echo Testing Image URL using wget
+          wget -q -O - 127.0.0.1:8282/version | grep -i version
+
+  container-deliver:
+    name: Deliver Container to Registry
+    needs: container-test
+    if: ${{github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')}}
+    permissions:
+      packages: write
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@8e1d5461f02b7886d3c1a774bfbd873650445aa2
+        with:
+          images: |
+            ghcr.io/${{ github.repository_owner }}/hivebox
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@327cd5a69de6c009b9ce71bce8395f28e651bf99
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@e5daf5da4ebfd37300852e88eac67cc6ad147f38
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@6a25f988bdfa969e96a38fc9f843ea31e0b5df27
+
+      - name: Build and publish image
+        uses: docker/build-push-action@67a2d409c0a876cbe6b11854e3e25193efe4e62d
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
