ci: fix workflow_call path and add secret

--- a/.github/workflows/version-upgrade-ci.yaml
+++ b/.github/workflows/version-upgrade-ci.yaml
@@ -15,9 +15,11 @@ jobs:
   container-test:
     name: Build and Test Container
     needs: test-code
-    uses: ./.github/workfflows/test-container.yaml
+    uses: ./.github/workflows/test-container.yaml
 
   container-deliver:
     name: Deliver Container to Registry
     needs: container-test
     uses: ./.github/workflows/deliver-container.yaml
+    secrets:
+      github_token: ${{ secrets.GITHUB_TOKEN}}
