--- a/.github/workflows/version-upgrade-ci.yaml
+++ b/.github/workflows/version-upgrade-ci.yaml
@@ -20,6 +20,8 @@ jobs:
   container-deliver:
     name: Deliver Container to Registry
     needs: container-test
+    permissions:
+      packages: write
     uses: ./.github/workflows/deliver-container.yaml
     secrets:
       gh_token: ${{ secrets.GITHUB_TOKEN }}
