--- a/.github/workflows/version-upgrade-ci.yaml
+++ b/.github/workflows/version-upgrade-ci.yaml
@@ -9,6 +9,14 @@ on:
     branches: ["version/**"]
 
 jobs:
+  dump_contexts_to_log:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+
   test-code:
     uses: ./.github/workflows/test-code.yaml
 
