--- a/.github/workflows/feat-ci.yaml
+++ b/.github/workflows/feat-ci.yaml
@@ -15,5 +15,14 @@ jobs:
   container-test:
     name: Build and Test Container
     needs: [test-code]
-    if: github.ref_type != 'tag' || startsWith(github.ref, 'refs/tags/v')
     uses: ./.github/workflows/test-container.yaml
+
+  container-deliver:
+    name: Deliver Container to Registry
+    needs: [container-test]
+    permissions:
+      packages: write
+    if: startsWith(github.ref, 'refs/tags/v')
+    uses: ./.github/workflows/deliver-container.yaml
+    secrets:
+      gh_token: ${{ secrets.GITHUB_TOKEN }}
