--- a/.github/workflows/feat-ci.yaml
+++ b/.github/workflows/feat-ci.yaml
@@ -7,6 +7,8 @@ on:
   workflow_dispatch:
   push:
     branches: ["feat/**"]
+    tags:
+      - "v*"
 
 jobs:
   test-code:
@@ -22,7 +24,7 @@ jobs:
     needs: [container-test]
     permissions:
       packages: write
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
     uses: ./.github/workflows/deliver-container.yaml
     secrets:
       gh_token: ${{ secrets.GITHUB_TOKEN }}
